error
In file included from ./include/linux/compiler.h:58:0,
                 from ./include/uapi/linux/stddef.h:1,
                 from ./include/linux/stddef.h:4,
                 from ./include/uapi/linux/posix_types.h:4,
                 from ./include/uapi/linux/types.h:13,
                 from ./include/linux/types.h:5,
                 from ./include/linux/list.h:4,
                 from ./include/linux/module.h:9,
                 from /home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:1:
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c: In function 'nuevo_activate_plugin':
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:88:61: error: expected specifier-qualifier-list before 'state'
                 init_sized_list(&state->fcfs_queue,offsetof(state->fcfs_queue_node,
                                                             ^
./include/linux/compiler-gcc.h:159:21: note: in definition of macro '__compiler_offsetof'
  __builtin_offsetof(a, b)
                     ^
/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.c:88:52: note: in expansion of macro 'offsetof'
                 init_sized_list(&state->fcfs_queue,offsetof(state->fcfs_queue_node,
                                                    ^~~~~~~~
make[2]: *** [/home/bench/Carlos/plugins/plugin_sketch/plugin_nuevo.o] Error 1
make[1]: *** [_module_/home/bench/Carlos/plugins/plugin_sketch] Error 2
make: *** [all] Error 2
